--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "date-fns": "^2.18.0"
+    "date-fns": "^2.18.0",
+    "moment": "^2.29.1"
   }
 }
